HTML Prettify article

--- a/_posts/2013-05-30-acadnet-leo-romania-conference-ubervu.html
+++ b/_posts/2013-05-30-acadnet-leo-romania-conference-ubervu.html
@@ -13,4 +13,80 @@ blogger_id: tag:blogger.com,1999:blog-4563358888205449053.post-15865496607894969
 blogger_orig_url: http://palcu.blogspot.com/2013/05/acadnet-leo-romania-conference-ubervu.html
 ---
 
-<div class="separator" style="clear: both; text-align: center;"><a href="http://4.bp.blogspot.com/-aBRU9b9Ufew/UaeIVqoDhcI/AAAAAAAAEMA/soAzHDxGDqc/s1600/309925_458796347541935_116823168_n.png" imageanchor="1" style="clear: left; float: left; margin-bottom: 1em; margin-right: 1em;"><img border="0" src="http://4.bp.blogspot.com/-aBRU9b9Ufew/UaeIVqoDhcI/AAAAAAAAEMA/soAzHDxGDqc/s200/309925_458796347541935_116823168_n.png" height="122" width="200" /></a></div><a href="http://1.bp.blogspot.com/-M7xmwyBu8GM/UaeIGb9XY8I/AAAAAAAAEL4/2e3eBjJT5_I/s1600/logo+LEO+Romania_Final+(1).png" imageanchor="1" style="clear: right; float: right; margin-bottom: 1em; margin-left: 1em;"><img border="0" src="http://1.bp.blogspot.com/-M7xmwyBu8GM/UaeIGb9XY8I/AAAAAAAAEL4/2e3eBjJT5_I/s200/logo+LEO+Romania_Final+(1).png" height="200" width="147" /></a>Full weekend for me in Bucharest. I qualified for the national networking contest organized by Cisco in Politehnica University, Leos from Romania elect their new board and will visit the new UberVU office.<br /><a name='more'></a><h2></h2><h2></h2><h2>Acadnet</h2><br /><table align="center" cellpadding="0" cellspacing="0" class="tr-caption-container" style="float: right; margin-left: 1em; text-align: right;"><tbody><tr><td style="text-align: center;"><a href="http://3.bp.blogspot.com/-pgycwL3q0Wg/UZhcs2bKNaI/AAAAAAAAa8M/QkrazYiOhjQ/w958-h639-no/IMG_2485.JPG" imageanchor="1" style="margin-left: auto; margin-right: auto;"><img border="0" src="http://3.bp.blogspot.com/-pgycwL3q0Wg/UZhcs2bKNaI/AAAAAAAAa8M/QkrazYiOhjQ/w958-h639-no/IMG_2485.JPG" height="213" width="320" /></a></td></tr><tr><td class="tr-caption" style="text-align: center;">Opening ceremony (pics taken from <a href="https://plus.google.com/photos/115184147091715275280/albums/5879550382683317345">mr. Onea</a>)</td></tr></tbody></table>My objective was to take one of the 3 prizes, to secure a place at one of the local universities. After putting lots of hours into studying, things didn't go out as planned, and I only got the 6th place. Back to studying maths for my finals.<br /><br />The contest was held without any problems and we even had a board games evening with friends from ROSEdu. Additionally, we had enough free time, so I visited lots of student friends in their dorms, trying to get some last opinions about which university (and consequently career path) should I choose.<br /><br /><table align="center" cellpadding="0" cellspacing="0" class="tr-caption-container" style="margin-left: auto; margin-right: auto; text-align: center;"><tbody><tr><td><a href="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-snc6/248082_461527873935449_633745190_n.jpg" imageanchor="1" style="margin-left: auto; margin-right: auto;"><img border="0" height="213" src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-snc6/248082_461527873935449_633745190_n.jpg" width="320" /></a></td></tr><tr><td class="tr-caption" style="font-size: 12.800000190734863px;">Catan rullz</td></tr></tbody></table><table align="center" cellpadding="0" cellspacing="0" class="tr-caption-container" style="margin-left: auto; margin-right: auto; text-align: center;"><tbody><tr><td><a href="http://3.bp.blogspot.com/-9sG1n_7c7_s/UZqKkbIsFPI/AAAAAAAAbIs/kUEYrneYqPg/w962-h639-no/DSC_0914.JPG" imageanchor="1" style="margin-left: auto; margin-right: auto;"><img border="0" src="http://3.bp.blogspot.com/-9sG1n_7c7_s/UZqKkbIsFPI/AAAAAAAAbIs/kUEYrneYqPg/w962-h639-no/DSC_0914.JPG" height="212" width="320" /></a></td></tr><tr><td class="tr-caption" style="font-size: 12.800000190734863px;">Boiled brains getting bored before receiving the statements</td></tr></tbody></table><h2>Leo Conference</h2>I managed to arrive in time for the conference. After the reports of the 18 clubs, we elected our new board and I will be for another year responsible for the technologies used in our district.<br /><br /><div class="separator" style="clear: both; text-align: center;"><a href="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash3/941229_659305007429104_1003704832_n.jpg" imageanchor="1" style="margin-left: 1em; margin-right: 1em;"><img border="0" height="360" src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash3/941229_659305007429104_1003704832_n.jpg" width="640" /></a></div><br />In the evening, after crashing the Lions party, we retreated to Bal a Mouk, a secluded club in the old city, where the DJ didn't let us sit on the chairs for the whole night.<br /><br /><h2>uberVU</h2>Visiting a startup is always inspiring. Besides, their new office is really neat and big. More about them soon :-P.<br /><table align="center" cellpadding="0" cellspacing="0" class="tr-caption-container" style="margin-left: auto; margin-right: auto; text-align: center;"><tbody><tr><td style="text-align: center;"><a href="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash3/602153_148359491999620_1233157766_n.jpg" imageanchor="1" style="margin-left: auto; margin-right: auto;"><img border="0" height="426" src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash3/602153_148359491999620_1233157766_n.jpg" width="640" /></a></td></tr><tr><td class="tr-caption" style="text-align: center;">one of the 4 <a href="https://www.facebook.com/media/set/?set=a.148359441999625.1073741830.148048065364096&amp;type=3">floors</a><br /><br /><br /></td></tr></tbody></table>
+<div class="separator" style="clear: both; text-align: center;">
+    <a href="http://4.bp.blogspot.com/-aBRU9b9Ufew/UaeIVqoDhcI/AAAAAAAAEMA/soAzHDxGDqc/s1600/309925_458796347541935_116823168_n.png" imageanchor="1" style="clear: left; float: left; margin-bottom: 1em; margin-right: 1em;"><img border="0" src="http://4.bp.blogspot.com/-aBRU9b9Ufew/UaeIVqoDhcI/AAAAAAAAEMA/soAzHDxGDqc/s200/309925_458796347541935_116823168_n.png" height="122" width="200" /></a>
+</div>
+<a href="http://1.bp.blogspot.com/-M7xmwyBu8GM/UaeIGb9XY8I/AAAAAAAAEL4/2e3eBjJT5_I/s1600/logo+LEO+Romania_Final+(1).png" imageanchor="1" style="clear: right; float: right; margin-bottom: 1em; margin-left: 1em;"><img border="0" src="http://1.bp.blogspot.com/-M7xmwyBu8GM/UaeIGb9XY8I/AAAAAAAAEL4/2e3eBjJT5_I/s200/logo+LEO+Romania_Final+(1).png" height="200" width="147" /></a>Full weekend for me in Bucharest. I qualified for the national networking contest organized by Cisco in Politehnica University, Leos from Romania elect their new board and will visit the new UberVU office.
+<br />
+<a name='more'></a>
+<h2></h2>
+<h2></h2>
+<h2>Acadnet</h2>
+<br />
+<table align="center" cellpadding="0" cellspacing="0" class="tr-caption-container" style="float: right; margin-left: 1em; text-align: right;">
+    <tbody>
+        <tr>
+            <td style="text-align: center;">
+                <a href="http://3.bp.blogspot.com/-pgycwL3q0Wg/UZhcs2bKNaI/AAAAAAAAa8M/QkrazYiOhjQ/w958-h639-no/IMG_2485.JPG" imageanchor="1" style="margin-left: auto; margin-right: auto;"><img border="0" src="http://3.bp.blogspot.com/-pgycwL3q0Wg/UZhcs2bKNaI/AAAAAAAAa8M/QkrazYiOhjQ/w958-h639-no/IMG_2485.JPG" height="213" width="320" /></a>
+            </td>
+        </tr>
+        <tr>
+            <td class="tr-caption" style="text-align: center;">Opening ceremony (pics taken from <a href="https://plus.google.com/photos/115184147091715275280/albums/5879550382683317345">mr. Onea</a>)</td>
+        </tr>
+    </tbody>
+</table>My objective was to take one of the 3 prizes, to secure a place at one of the local universities. After putting lots of hours into studying, things didn't go out as planned, and I only got the 6th place. Back to studying maths for my finals.
+<br />
+<br />The contest was held without any problems and we even had a board games evening with friends from ROSEdu. Additionally, we had enough free time, so I visited lots of student friends in their dorms, trying to get some last opinions about which university (and consequently career path) should I choose.
+<br />
+<br />
+<table align="center" cellpadding="0" cellspacing="0" class="tr-caption-container" style="margin-left: auto; margin-right: auto; text-align: center;">
+    <tbody>
+        <tr>
+            <td>
+                <a href="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-snc6/248082_461527873935449_633745190_n.jpg" imageanchor="1" style="margin-left: auto; margin-right: auto;"><img border="0" height="213" src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-snc6/248082_461527873935449_633745190_n.jpg" width="320" /></a>
+            </td>
+        </tr>
+        <tr>
+            <td class="tr-caption" style="font-size: 12.800000190734863px;">Catan rullz</td>
+        </tr>
+    </tbody>
+</table>
+<table align="center" cellpadding="0" cellspacing="0" class="tr-caption-container" style="margin-left: auto; margin-right: auto; text-align: center;">
+    <tbody>
+        <tr>
+            <td>
+                <a href="http://3.bp.blogspot.com/-9sG1n_7c7_s/UZqKkbIsFPI/AAAAAAAAbIs/kUEYrneYqPg/w962-h639-no/DSC_0914.JPG" imageanchor="1" style="margin-left: auto; margin-right: auto;"><img border="0" src="http://3.bp.blogspot.com/-9sG1n_7c7_s/UZqKkbIsFPI/AAAAAAAAbIs/kUEYrneYqPg/w962-h639-no/DSC_0914.JPG" height="212" width="320" /></a>
+            </td>
+        </tr>
+        <tr>
+            <td class="tr-caption" style="font-size: 12.800000190734863px;">Boiled brains getting bored before receiving the statements</td>
+        </tr>
+    </tbody>
+</table>
+<h2>Leo Conference</h2>I managed to arrive in time for the conference. After the reports of the 18 clubs, we elected our new board and I will be for another year responsible for the technologies used in our district.
+<br />
+<br />
+<div class="separator" style="clear: both; text-align: center;">
+    <a href="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash3/941229_659305007429104_1003704832_n.jpg" imageanchor="1" style="margin-left: 1em; margin-right: 1em;"><img border="0" height="360" src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash3/941229_659305007429104_1003704832_n.jpg" width="640" /></a>
+</div>
+<br />In the evening, after crashing the Lions party, we retreated to Bal a Mouk, a secluded club in the old city, where the DJ didn't let us sit on the chairs for the whole night.
+<br />
+<br />
+<h2>uberVU</h2>Visiting a startup is always inspiring. Besides, their new office is really neat and big. More about them soon :-P.
+<br />
+<table align="center" cellpadding="0" cellspacing="0" class="tr-caption-container" style="margin-left: auto; margin-right: auto; text-align: center;">
+    <tbody>
+        <tr>
+            <td style="text-align: center;">
+                <a href="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash3/602153_148359491999620_1233157766_n.jpg" imageanchor="1" style="margin-left: auto; margin-right: auto;"><img border="0" height="426" src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash3/602153_148359491999620_1233157766_n.jpg" width="640" /></a>
+            </td>
+        </tr>
+        <tr>
+            <td class="tr-caption" style="text-align: center;">one of the 4 <a href="https://www.facebook.com/media/set/?set=a.148359441999625.1073741830.148048065364096&amp;type=3">floors</a>
+                <br />
+                <br />
+                <br />
+            </td>
+        </tr>
+    </tbody>
+</table>
