--- a/tags.html
+++ b/tags.html
@@ -14,7 +14,7 @@ title: Tags
     {% endfor %}
   {% else %}
     {% for tag in tags_list %}
-      <li><a href="/tags#{{ tag[0] }}-ref" class='list-group-item'>
+      <li><a href="/tags#{{ tag[0] | slugify }}-ref" class='list-group-item'>
         {{ tag[0] }}</a> <span class='badge'>{{ tag[1].size }}</span>
       </li>
     {% endfor %}
