Make the tag cloud better

--- a/tags.html
+++ b/tags.html
@@ -3,7 +3,7 @@ layout: page
 title: Tags
 ---
 
-<ul>
+<ul class="tags-page">
   {% assign tags_list = site.tags %}
 
   {% if tags_list.first[0] == null %}
