--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="home">
+<div class="home" itemscope itemtype="http://schema.org/BlogPosts">
   <h2 class="inline">Last Articles</h2>
   <p class="url">
     <a href="/all">view all</a> / <a href="/romanian">Romanian</a> / <a href="/english">English</a>
